add part modified

--- a/01_Todolist/style.css
+++ b/01_Todolist/style.css
@@ -7,6 +7,6 @@ body{
     padding: 10vh;
 }
 #store{
-    background-color: antiquewhite;
+    /* background-color: antiquewhite; */
     width: 70vh;
 }
