Button added to each Div!!

--- a/01_Todolist/style.css
+++ b/01_Todolist/style.css
@@ -10,3 +10,27 @@ body{
     /* background-color: antiquewhite; */
     width: 70vh;
 }
+#taskDiv{
+    flex-direction:  row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+#add{
+    border-radius: 8px;
+    height: 30px;
+    background-color: green;
+    color: solid black;
+}
+#taskIn{
+    height: 30px;
+    width: 40vh;
+    opacity: 0.7;
+    border-radius: 6px;
+}
+button{
+    border-radius: 8px;
+    height: 30px;
+    background-color: green;
+    color: solid black;
+}
