done button perfectly done

--- a/01_Todolist/style.css
+++ b/01_Todolist/style.css
@@ -14,13 +14,16 @@ body{
     flex-direction:  row;
     align-items: center;
     justify-content: space-between;
+    display : flex;
+    background-color : gray;
+    border-radius : 15px;
+    padding : 12px;
+    margin-top: 12px;
 }
 
 #add{
-    border-radius: 8px;
-    height: 30px;
-    background-color: green;
-    color: solid black;
+    width: 10vh;
+    height: 5vh;
 }
 #taskIn{
     height: 30px;
@@ -33,4 +36,10 @@ button{
     height: 30px;
     background-color: green;
     color: solid black;
+}
+
+#btnDiv{
+    display: flex;
+    gap: 2px;
+    /* background-color: aqua; */
 }
